updated generated file names

--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -4,7 +4,7 @@ schema:
 
 # Where should the generated server code go?
 exec:
-  filename: graph/generated/generated.go
+  filename: graph/generated/exec.go
   package: generated
 
 # Uncomment to enable federation
@@ -14,7 +14,7 @@ exec:
 
 # Where should any generated models go?
 model:
-  filename: graph/model/models_gen.go
+  filename: graph/model/generated.go
   package: model
 
 # Where should the resolver implementations go?
